legal overflow fixed, blog pge sizing fixed

--- a/src/Style/Blog.scss
+++ b/src/Style/Blog.scss
@@ -49,7 +49,11 @@
 }
 
 .blog-content {
+  display: flex;
   padding-top: 16px;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: stretch;
 }
 
 .blog-header {
@@ -254,14 +258,38 @@
     padding-right: 5rem;
     padding-left: 5rem;
   }
-}
-@media (min-width: 1536px) {
-  .blogWrap {
-    max-width: 1536px;
-    padding-right: 13rem;
-    padding-left: 13rem;
+  .blog-content {
+    gap: 1rem;
   }
 }
+@media (min-width: 1650px) {
+  .blogWrap {
+    max-width: 1600px;
+    // padding-right: 13rem;
+    // padding-left: 13rem;
+  }
+  .blogswiper .arrow-ctrl{
+    .prev-arrow,
+    .next-arrow {
+      width: 70px;
+      height: 70px;
+  }}
+  .blog-grid{
+    gap: 2rem;
+  }
+
+}
+@media (min-width: 2000px) {
+  .blogWrap {
+    max-width: 2000px;
+    // padding-right: 13rem;
+    // padding-left: 13rem;
+
+  .blog-grid{
+    gap: 3rem;
+  }
+
+}}
 
 // blog post page
 
@@ -292,7 +320,7 @@
     }
 
     @media (min-width: 1024px) {
-      width: 66.666%;
+      // width: 66.666%;
     }
 
     .tag {
@@ -306,7 +334,7 @@
     }
 
     .title {
-      font-size: 24px;
+      // font-size: 24px;
       font-weight: bold;
       margin-top: 12px;
       line-height: normal;
@@ -397,7 +425,7 @@
     }
 
     @media (min-width: 1024px) {
-      width: 66.666%;
+      // width: 66.666%;
     }
 
     .content-image {
@@ -522,5 +550,8 @@
     padding: 0;
     font-size: 18px;
     cursor: pointer;
+    &:hover{
+        scale: 1.1;
+    }
   }
 }
