--- a/src/Style/Component/Component.scss
+++ b/src/Style/Component/Component.scss
@@ -639,7 +639,7 @@ th {
     min-height: 70vh;
     gap: 5vh;
     h1 {
-      font-size: clamp(1.4rem, 10vw, 5.55rem);
+      font-size: clamp(1.4rem, 8vw, 5.55rem);
     }
     p {
       width: 100%;
